# nurture-pool

./: .commit_msg  .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: publish.yml  test.yml
dns_resolver_pool/: __init__.py  exceptions.py  pool.py  pool_async.py  servers.py
docs/: CHANGELOG.md  PRODUCTION.md
docs/guides/: cookbook.md  deep-dive.md  quickstart.md  初级定制.md  底层源码.md  开箱即用.md  深度定制.md
examples/: __init__.py  async_integration.py  real_crawler_demo.py  simple_requests_demo.py  stress_test.py
proxy_pool/: __init__.py  exceptions.py  pool.py  pool_async.py  servers.py
resource_pool/: __init__.py  _feeding.py  _shortcuts.py  base.py  exceptions.py  orchestrator.py  orchestrator_async.py
resource_pool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: calc_header_combos.py  ssr2.py  test_async.py  test_concurrency.py  test_dns_resolver_pool.py  test_end_to_end.py  test_orchestrator.py  test_proxy_pool.py  test_user_agent_pool.py
tests/live_demo/: scrapy_output.json  test_async.py  test_multi_process.py  test_multi_thread.py  test_resolver_fix.py  test_scrapy.py  test_single_thread.py
tests/live_demo/scrapy_demo/scrapy_demo/: middlewares.py  pipelines.py  settings.py
tests/live_demo/scrapy_demo/scrapy_demo/spiders/: baidu.py
user_agent_pool/: __init__.py  agents.py  exceptions.py  pool.py  pool_async.py
