[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-pool"
version = "0.2.0"
description = "可扩展的网络资源池框架，内置 DNS 解析器池与 User-Agent 池"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.6",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/your-org/resource-pool"

[project.optional-dependencies]
aiohttp = ["aiohttp>=3.9"]
httpx = ["httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["user_agent_pool*", "dns_resolver_pool*"]
